<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        tools:context=".Recipe">

        <ImageView
            android:id="@+id/mainImageView"
            android:layout_width="wrap_content"
            android:layout_height="188dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/circleIndicatorImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/recipe1image1" />

        <ImageButton
            android:id="@+id/rightButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#00FFFFFF"
            android:onClick="rightButton"
            android:scaleType="fitXY"
            android:tint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/mainImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainImageView"
            app:srcCompat="@drawable/rightarrow" />

        <ImageButton
            android:id="@+id/leftButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#00FFFFFF"
            android:onClick="leftButton"
            android:scaleType="fitXY"
            android:tint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/mainImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainImageView"
            app:srcCompat="@drawable/leftarrow" />

        <ImageView
            android:id="@+id/circleIndicatorImageView"
            android:layout_width="76dp"
            android:layout_height="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainImageView"
            app:srcCompat="@drawable/circle1" />

        <TextView
            android:id="@+id/recipeTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#BF0101"
            android:textSize="33sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleIndicatorImageView" />

        <TextView
            android:id="@+id/recipeInfoTextView"
            android:layout_width="338dp"
            android:layout_height="67dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="#930000"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeTitleTextView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/ingredientsTextView"
            android:textColor="#1A4300"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeInfoTextView" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox8" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox9" />

        <CheckBox
            android:id="@+id/checkBox11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox10" />

        <CheckBox
            android:id="@+id/checkBox12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox11" />

        <CheckBox
            android:id="@+id/checkBox14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox13" />

        <CheckBox
            android:id="@+id/checkBox15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox14" />

        <CheckBox
            android:id="@+id/checkBox13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#0A4001"
            android:fontFamily="@font/righteous"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#BF0101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox12" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/timerTextView"
            android:textColor="#1A4300"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox15" />

        <TextView
            android:id="@+id/timerView"
            android:layout_width="0dp"
            android:layout_height="113dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="#930000"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/startStopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#007002"
            android:onClick="startStopTimer"
            android:text="@string/startStopButtonText"
            app:layout_constraintEnd_toStartOf="@+id/resetButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerView" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#B30000"
            android:onClick="resetTimer"
            android:text="@string/resetButtonText"
            app:layout_constraintBottom_toBottomOf="@+id/startStopButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/startStopButton"
            app:layout_constraintTop_toTopOf="@+id/startStopButton" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/recipeTextView"
            android:textColor="#1A4300"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startStopButton" />

        <TextView
            android:id="@+id/recipeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#058055"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/citationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#616161"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <Button
            android:id="@+id/websiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/viewRecipeButtonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/citationTextView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/citationTextView"
            android:textColor="#1A4300"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>